src/test/deca/syntax/parser/invalid/class_extends_without_keyword.deca
// Parser test, no keyword "extends" to extend class

class A {

}

class B A {

}